<resources>
    <string name="app_name">Ghostly</string>
    <string name="prefs_file">com.ghostly.PREFERENCE_FILE_KEY</string>
    <string name="default_web_client_id">462626683794-uv339n1jhd9h27evmtjepltsf4ovi13d.apps.googleusercontent.com</string>
    <string name="calendar">Calendar</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="emotion">Emotion</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_asleep_format">Time asleep %1$d h %2$d m</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="done">Done</string>
    <string name="write_here">Write here...</string>
    <string name="today_s_note">Today\'s note</string>
    <string name="record_your_sleep">Record your sleep...</string>
    <string name="sleep">Sleep</string>
    <string name="how_was_your_day">How was your day?</string>
    <string name="weather">Weather</string>
    <string name="meals">Meals</string>
    <string name="health">Health</string>
    <string name="emotions">Emotions</string>
    <string name="today_s_photo">Today\'s photo</string>
    <string name="basic_analysis">Basic Analysis</string>
    <string name="mood_bar">Mood Bar</string>
    <string name="icon_ranking">Icon Ranking</string>
    <string name="sleep_analysis">Sleep Analysis</string>
    <string name="average_bedtime">Average Bedtime</string>
    <string name="average_wakeup">Average Wakeup</string>
    <string name="average_sleep">Average Sleep</string>
    <string name="happy">Muy feliz</string>
    <string name="smile">Feliz</string>
    <string name="neutral">Normal</string>
    <string name="sad">Triste</string>
    <string name="verysad">Muy triste</string>
    <string name="calculator">Calculator</string>
</resources>