<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_light_purple"
    tools:context=".HappinessCalculatorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calculadora de la Felicidad"
                android:textSize="25sp"
                android:layout_marginTop="40dp"
                android:textColor="@color/pastel_yellow"
                android:layout_gravity="center"
                android:fontFamily="@font/fuente" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="60dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/muyfeliz"
                    android:contentDescription="@string/happy" />

                <EditText
                    android:id="@+id/days_very_happy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Días Muy Feliz"
                    android:backgroundTint="@color/pastel_yellow"
                    android:fontFamily="@font/fuente"
                    android:inputType="number"
                    android:layout_marginStart="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/feliz"
                    android:contentDescription="@string/smile" />

                <EditText
                    android:id="@+id/days_happy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Días Feliz"
                    android:backgroundTint="@color/pastel_yellow"
                    android:fontFamily="@font/fuente"
                    android:inputType="number"
                    android:layout_marginStart="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/normal"
                    android:contentDescription="@string/neutral" />

                <EditText
                    android:id="@+id/days_neutral"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Días Neutral"
                    android:backgroundTint="@color/pastel_yellow"
                    android:fontFamily="@font/fuente"
                    android:inputType="number"
                    android:layout_marginStart="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/triste"
                    android:contentDescription="@string/sad" />

                <EditText
                    android:id="@+id/days_sad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Días Triste"
                    android:backgroundTint="@color/pastel_yellow"
                    android:fontFamily="@font/fuente"
                    android:inputType="number"
                    android:layout_marginStart="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/muytriste"
                    android:contentDescription="@string/verysad" />

                <EditText
                    android:id="@+id/days_very_sad"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Días Muy Triste"
                    android:backgroundTint="@color/pastel_yellow"
                    android:fontFamily="@font/fuente"
                    android:inputType="number"
                    android:layout_marginStart="16dp" />
            </LinearLayout>

            <Button
                android:id="@+id/calculate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Calcular Felicidad"
                android:layout_marginTop="70dp"
                android:textSize="19sp"
                android:background="@drawable/button_rounded"
                android:textColor="@color/pastel_yellow"
                android:fontFamily="@font/fuente" />

            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp"
                android:textColor="@android:color/holo_red_light"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:fontFamily="@font/fuente" />

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp"
                android:textColor="@color/pastel_yellow"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:fontFamily="@font/fuente" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_nav_background"
        android:backgroundTint="@color/pastel_yellow"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/navigation_calendar"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_calendar"
                android:contentDescription="@string/calendar"
                android:background="@null"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/navigation_statistics"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/statistics"
                android:scaleType="centerInside"
                android:src="@drawable/ic_statistics" />

            <!-- Empty space for the central button -->
            <View
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/navigation_calculator"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_calculator"
                android:contentDescription="@string/calculator"
                android:background="@null"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/navigation_settings"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:src="@drawable/ic_settings"
                android:contentDescription="@string/settings"
                android:background="@null"
                android:scaleType="centerInside" />
        </LinearLayout>

        <!-- Central button -->
        <ImageButton
            android:id="@+id/navigation_register"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:background="@null"
            android:src="@drawable/muyfeliz"
            android:contentDescription="@string/register"
            android:scaleType="fitCenter"
            android:layout_marginBottom="20dp" /> <!-- Aumentar el margen inferior para moverlo hacia arriba -->
    </RelativeLayout>
</RelativeLayout>
